--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,15 +17,20 @@ body {
   color: #fff;
 }
 
-h3 {
+h1, h3 {
   font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: 4.2rem;
+  font-weight: 500;
 }
 
 h3 {
   color: inherit;
   font-size: 2rem;
   font-weight: 300;
-  text-transform: uppercase;
   margin-bottom: .5em;
 }
 
@@ -58,6 +63,16 @@ small {
 
 small>span {
   font-size: 1.25rem;
+}
+
+.header {
+  text-align: center;
+  background-color: lightgreen;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .divider {
