--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,10 +11,10 @@ html {
 }
 
 body {
-  background-color: hsla(0, 0%, 28%, 0.8);
+  background-color: rgba(148,187,233,.45);
   line-height: 1.33;
   word-spacing: .1rem;
-  color: #fff;
+  color: #000;
 }
 
 h1, h3 {
@@ -23,8 +23,15 @@ h1, h3 {
 }
 
 h1 {
-  font-size: 4.2rem;
+  font-size: 5.8rem;
   font-weight: 500;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #494949;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 300;
+  transform: translateY(10vh);
 }
 
 h3 {
@@ -39,6 +46,8 @@ p {
   font-size: .95rem;
   line-height: 1.2;
   margin: 1.2em 0;
+  font-family: "Raleway", sans-serif;
+  color: #494949;
 }
 
 p:first-of-type {
@@ -50,8 +59,9 @@ span {
   font-size: 1.625rem;
   line-height: .9;
   font-weight: 700;
-  color: #2ECC71;
-  text-shadow: 3px 3px #555;
+  /* color: #9151ba; */
+  color: rgb(84, 75, 160);
+  text-shadow: 0 1px 60px #555;
   display: inline-block;
   min-width: 3rem;
 }
@@ -66,13 +76,137 @@ small>span {
 }
 
 .header {
-  text-align: center;
   background-color: lightgreen;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+  padding: 2em 5em;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  background: url('../img/header-bg2.svg') no-repeat center center;
+  background-size: auto 120%;
+}
+
+.header-name {
+  font-family: 'Ubuntu', sans-serif;
+  color: #494949;
+  text-shadow: none;
+  display: block;
+  font-size: 1em;
+}
+
+.header-name--top {
+  font-weight: 300;
+  font-size: .35em;
+}
+
+.header-name--bottom {
+  color: #323232;
+  font-weight: 700;
+}
+
+/* .header__text {
+  display: flex;
+  align-items: flex-end;
+  text-transform: uppercase;
+  position: relative;
+  align-self: flex-start;
+} */
+
+/* .header__text>p {
+  font-size: .7rem;
+  margin: 1em;
+} */
+
+p:first-of-type.header__text {
+  margin: 1em;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.logo {
+  display: inline-block;
+  text-indent: -999em;
+  min-height: 3em;
+  background-size: contain;
+  margin: 1em;
+  flex: auto;
+}
+
+.logo--dpm {
+  background-image: url("../img/dpm-logo.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.logo--aim {
+  background-image: url("../img/aim-logo.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.logo--cdp {
+  background-image: url("../img/cdp-logo.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.logo--partner-1 {
+  background-image: url("../img/partner11.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.logo--partner-2 {
+  background-image: url("../img/partner22.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.logo--partner-3 {
+  background-image: url("../img/partner3.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.logo--partner-4 {
+  background-image: url("../img/partner44.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.logo--partner-5 {
+  background-image: url("../img/partner5.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.logo--partner-6 {
+  background-image: url("../img/partner6.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.date-container {
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(238,174,202,.75) 15%, rgba(148,187,233,.3) 30%, transparent 100%);
+  transform: translateY(5vh);
+}
+
+.date {
+  font-family: 'Raleway', sans-serif;
+  font-size: 2em;
+  font-weight: 700;
+  text-align: center;
+}
+
+p.date:first-of-type {
+  margin: 1em 10em;
 }
 
 .divider {
@@ -90,7 +224,7 @@ small>span {
 }
 
 .toggle:hover {
-    background-color: rgba(153, 149, 138, 0.1);
+  background-color: rgba(153, 149, 138, 0.1);
 }
 
 .tap {
@@ -98,8 +232,8 @@ small>span {
   background-size: 2em;
 }
 
-.aligned-right {
-  text-align: right;
+.aligned-center {
+  text-align: center;
 }
 
 .centered {
@@ -129,4 +263,14 @@ small>span {
   .pd-left {
     padding-left: 0;
   }
+}
+
+/* Utilities */
+.centered {
+  text-align: center;
+}
+
+.aligned {
+  display: flex;
+  align-items: flex-end;
 }
