--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,10 +12,11 @@ html {
 
 body {
   /* background-color: rgba(148,187,233,.45); */
-  background: #000;
-  background: -webkit-radial-gradient(bottom, transparent, #CEE1F5);
+  background: #fff;
+  /* background: -webkit-radial-gradient(bottom, transparent, #CEE1F5);
   background: -moz-radial-gradient(bottom, transparent, #CEE1F5);
-  background: radial-gradient(to top, #E2C2DA, #CEE1F5);
+  background: radial-gradient(to top, #E2C2DA, #CEE1F5); */
+  background: linear-gradient(0deg, rgba(238,174,202,.25) 0%, rgba(145,136,221,.25) 28%, rgba(148,187,233,.25) 100%);
   line-height: 1.33;
   word-spacing: .1rem;
   color: #000;
@@ -200,7 +201,7 @@ p:first-of-type.header__text {
 
 .date-container {
   background: rgb(238,174,202);
-  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(238,174,202,.75) 15%, rgba(148,187,233,.3) 30%, transparent 100%);
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(238,174,202,.75) 15%, rgba(148,187,233,.3) 25%, transparent 60%);
   transform: translateY(5vh);
 }
 
