--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -66,7 +66,7 @@ p, li, small {
   font-size: .95rem;
   line-height: 1.2;
   margin: 1.2em 0;
-  font-family: "Raleway", sans-serif;
+  font-family: "Montserrat", sans-serif;
   /* color: #494949; */
   color: #000;
 }
