--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -92,6 +92,13 @@ b {
   font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
   line-height: 1.3;
+  margin-top: .75em;
+  margin-bottom: .5em;
+  display: inline-block;
+}
+
+small>b {
+  margin: 0;
 }
 
 @media (max-width: 39.99em) {
@@ -116,6 +123,7 @@ small {
   display: block;
   color: inherit;
   line-height: 1.2;
+  margin-bottom: .7em;
 }
 
 small>span {
